# dataform

./: .bazelrc  .eslintrc.js  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  build-and-publish-with-op-to-dataform.sh  build.json  build.package.json  build.sh  cli.ts  cloudbuild-deploy.json  cloudbuild-publish.yaml  cloudbuild-test.json  cloudbuild-test.yaml  cloudbuild-triggers.json  cloudbuild-version.yaml  cloudbuild.json  cloudbuild.yaml  commands.ts  common.package.json  contributing.md  contributors.md  deploying.md  docker-compose.yaml  executor.ts  go.mod  go.sum  index.html  index.ts  lerna.json  package-lock.json  package.json  pnpm-lock.yaml  readme.md  requirements_lock.txt  run.sh  tmp.js  (+6 more)
.github/: CODEOWNERS  auto-merge.yml
adapters/: index.ts
api/: BUILD  api.package.json  gen_index.ts  index.ts  package.json  sql_formatter.d.ts  ssh_tunnel_proxy.ts  utils.ts
app/: BUILD  index.html  index.tsx  overview.scss  overview.tsx  service.ts  webpack.config.js
assertion_utils/: .gitignore  BUILD  assertion_utils.package.json  index.ts
cli/: BUILD  README.md  analytics.ts  bigquery_test.ts  cli.package.json  commands.ts  config.ts  console.ts  console_test.ts  credentials.ts  executor.ts  index.ts  index_compile_test.ts  index_help_test.ts  index_init_test.ts  index_jit_advanced_test.ts  index_jit_dependency_test.ts  index_jit_main_test.ts  index_jit_runtime_test.ts  index_project_test.ts  index_run_e2e_test.ts  index_test.ts  index_test_base.ts  jit_rpc_test.ts  jit_run_test.ts  package.json  tslint.json  util.ts  util_test.ts  utils.ts  utils_test.ts  yargswrapper.ts
cloudbuild/: BUILD  Dockerfile  cloudbuild.yaml  install_requirements.sh  run_tests.sh
common/: BUILD
components/: BUILD  _colors.scss  breadcrumb.scss  breadcrumb.tsx  button.scss  button.tsx  card.scss  card.tsx  collapse.scss  collapse.tsx  controlled_dialog.tsx  delete_dialog.tsx  dialog.scss  dialog.tsx  error_boundary.scss  error_boundary.tsx  flex.scss  flex.tsx  forms.scss  forms.tsx  list.scss  list.tsx  root.scss  root.tsx  spinner.scss  spinner.tsx  step_indicator.scss  step_indicator.tsx  table.scss  table.tsx  tag.scss  tag.tsx
content/: BUILD
core/: BUILD  assertion.ts  column_descriptors.ts  common.ts  compilation_sql.ts  compilation_sql_adapter.ts  compilers.ts  compilers_test.ts  contextable.ts  contextables.ts  core.package.json  declaration.ts  extension.ts  gen_index.ts  index.ts  jit_compiler.ts  jit_compiler_test.ts  jit_context.ts  jit_context_test.ts  main.ts  main_test.ts  materialization.ts  notebook.ts  operation.ts  package.json  path.ts  session.ts  sqlx_parser.ts  table.ts  targets.ts  tasks.ts  test.ts  types.d.ts  utils.ts  utils_test.ts  validation.ts  version.ts.tmpl  workflow_settings.ts  workflow_settings_test.ts
crossdb/: BUILD  crossdb.package.json  index.ts  package.json
dft/: index.ts
docs/: .babelrc  .gitignore  BUILD  CNAME  Gemfile  _config.yml  _documentation.tsx  _methods.ts  _structs.ts  algolia.json  common.css  common_styles.ts  configs-reference.md  content_tree.ts  global.css  highlight.css  index.md  inline.html  next.config.js  packages.md  session-reference.md  tsconfig.json  types.d.ts
eslint-rules/: no-node-builtins.js
example/: package.json
examples/: .gitignore  BUILD  examples_test.ts
fe/: BUILD  global.css  global.css.orig  highlight.css
github-issue-webhook/: BUILD  deploy_function.bzl  deploy_github_issue_filter_webhook.sh  gcloud_function.bzl  github-issue-webhook.package.json  index.ts
grpc-web-proxy/: BUILD  cli.ts  grpc-web-proxy.package.json  index.ts  readme.md
newdocs/: README.md  globals.md
package/: bundle.js  package.json  worker_bundle
protobufts/: BUILD  README.md  plugin.proto  protobufts.spec.ts  protoc-gen-ts.ts  serialize.ts  transpiler.ts  ts_proto_library.bzl  types.ts
protoc-gen-ts/: BUILD  README.md  parameters.ts  protoc-gen-ts.ts  transpiler.ts  ts_proto_library.bzl  types.ts
protomongo/: BUILD  example.proto  protomongo.go  protomongo_test.go
protos/: BUILD  build  configs.proto  core.proto  data_preparation.proto  db_adapter.proto  dft.proto  environments.proto  evaluation.proto  execution.proto  extension.proto  index.ts  jit.proto  package.json  profiles.proto  protos.package.json  schedules.proto  server.proto
pycore/: BUILD  README.md  __main__.py  adapter.py  assertion.py  common.py  declaration.py  main.py  operation.py  readme.md  session.py  table.py
redis/: BUILD  client.spec.ts  client.ts
runners/: bigquery.ts  index.ts  redshift.ts  snowflake.ts
sample/: query1.js  query2.js
sandbox/: BUILD  compile.spec.ts  compile_executor.cc  executor copy.cc  executor.cc  sandbox_executor.cc  sandboxee.cc
scripts/: build  clean  create_gh_pr  create_git_branch  create_npmrc  create_secret  decode_credentials  decrypt_secret  lint  make_typedocs.sh  publish  regenerate_docs  run  (+8 more)
(+1241 files in other folders)
