"""
MODULE.bazel file configures Bazel modules and dependencies for the Dataform project.
"""

module(
    name = "df",
    version = "3.0.2",  # TODO: update automatically.
    repo_name = "dataform",
)

####### rules_js #########

bazel_dep(name = "aspect_rules_js", version = "2.3.8")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
    npmrc = "//:.npmrc",
)

use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

use_repo(pnpm, "pnpm")

############## rules_ts ###############

bazel_dep(name = "aspect_rules_ts", version = "3.6.0")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)

rules_ts_ext.deps(
    ts_version_from = "//:package.json",
)

use_repo(rules_ts_ext, "npm_typescript")
