module(
    name = "df",
    version = "1.0.0",
)

# 1. bazel_skylib
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# 2. com_google_protobuf
bazel_dep(name = "protobuf", version = "27.3", repo_name = "com_google_protobuf")


# 4. rules_go
bazel_dep(name = "rules_go", version = "0.49.0", repo_name = "io_bazel_rules_go")

# 5. bazel_gazelle
bazel_dep(name = "gazelle", version = "0.37.0", repo_name = "bazel_gazelle")

# Go dependencies via Gazelle's go_deps extension
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.module(
    path = "google.golang.org/grpc",
    sum = "h1:rRYRFMVgRv6E0D70Skyfsr28tDXIuuPZyWGMPdMcnXg=",
    version = "v1.27.0",
)
go_deps.module(
    path = "golang.org/x/net",
    sum = "h1:2mqDk8w/o6UmeUCu5Qiq2y7iMf6anbx+YA8d1JFoFrs=",
    version = "v0.0.0-20191002035440-2ec189313ef0",
)
go_deps.module(
    path = "golang.org/x/text",
    sum = "h1:tW2bmiBqwgJj/UpqtC8EpXEZVYOwU0yG4iWbprSVAcs=",
    version = "v0.3.2",
)
use_repo(
    go_deps,
    "org_golang_google_grpc",
    "org_golang_x_net",
    "org_golang_x_text",
)

# 6. Custom gcloud SDK extension
gcloud_sdk_ext = use_extension("//tools/gcloud:extensions.bzl", "gcloud_sdk_extension")
use_repo(gcloud_sdk_ext, "gcloud_sdk")
